--- a/index-de.html
+++ b/index-de.html
@@ -13,7 +13,7 @@
 	<meta property="og:type"         content="website" />
     <meta name="og:title" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und CSS"/>
     <meta name="og:description" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und CSS"/>
-	<meta property="og:image"        content="https://content-gemeinsam-erstellen.de/images/logo_DE.png" />
+	<meta property="og:image"        content="https://print-css.com/images/logo_DE.png" />
     <link rel="image_src" href="https://print-css.com/images/logo_DE.png" />
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="bootstrap-theme.css">
@@ -33,9 +33,9 @@
                     <img id="logo" src="images/logo_DE.png"/>
                 </div>
                 <div class="col-sm-6">
-                    <h1>Drucklayouts erzeugen aus HTML/XML und CSS</h1>
-                    <h3 style="max-width: 80%">Hochqualitative PDF Dokumente
-                        für strukturierte Inhalte mit Hilfe moderner Webtechnologien gestalten.
+                    <h1>Hochwertige PDF Layouts erzeugen aus</br>HTML/XML und CSS</h1>
+                    <h3 style="max-width: 80%">PDF Dokumente
+                        aus strukturierten Inhalten mit Hilfe moderner Webtechnologien gestalten.
                     </h3>
                 </div>
             </div>
@@ -56,6 +56,11 @@
                    Texte im Kopf- oder Fußbereich etc. Der Vorteil unseres Ansatzes ist, daß
                    existierende Inhalte direkt wiederverwendet werden können. Das Erstellen von
                    Druck-Layouts kann mit Grundkenntnissen in CSS leicht erlernt werden.
+                   <br/>
+                   <br/>
+                   Auf unserem Portal
+                   <a href="https://print-css.rocks">print-css.rocks</a>
+                   finden Sie mehr zum CSS Paged Media Ansatz.
                 </ul>
             </div>
             <div class="col-sm-4">
@@ -201,6 +206,10 @@
                     <br>
                     <p>
                         <a href="https://web2print.zopyx.com">Web-to-Print Demos</a>
+                    </p>
+                    <br>
+                    <p>
+                        <a href="https://content-gemeinsam-erstellen.de">Content Gemeinsam Erstellen</a>
                     </p>
                 </div>
                 <div class="col-sm-4 text-right socials">
