--- a/index-de.html
+++ b/index-de.html
@@ -51,7 +51,7 @@
                    Inhalte aus HTML als Grundlage für die Konvertierung. Zur Festlegung
                    von Design und Layout verwenden wir CSS (Cascading Stylesheets) wie man
                    diese von der Website-Programmierung her kennt. Der CSS Paged Media Standard
-                   erweitert CSS um Anweisung, die spezifisch sind für Print-Layout wie z.B.
+                   erweitert CSS um Anweisungen, die spezifisch sind für Print-Layouts wie z.B.
                    den Satzspiegel, Mehrspaltigkeit, linke/rechte Seiten, wiederkehrende
                    Texte im Kopf- oder Fußbereich etc. Der Vorteil unseres Ansatzes ist, daß
                    existierende Inhalte direkt wiederverwendet werden können. Das Erstellen von
@@ -87,6 +87,7 @@
                 <p class="bold">Beratung</p>
                 <ul>
                     <li>Wir beraten Sie bei Ihrem PDF Projekt von Anfang bis Ende</li>
+                    <li>Unsere Beratung ist herstellerneutral</li>
                     <li>Analyse der Layoutanforderungen und Auswahl des geeigneten Tools</li>
                     <li>Individuelle Schulungen und Hands-on-Training</li>
                 </ul>
@@ -157,12 +158,6 @@
             <div class="col-sm-12">
                 <a href="https://zopyx.com/" target="_blank" class="link">
                     <img src="images/link_1.png" alt="">
-                </a>
-                <a href="https://www.smashdocs.net/" target="_blank" class="link">
-                    <img class="middle_img" src="images/link_2.png" alt="">
-                </a>
-                <a href="https://www.plone.org/" target="_blank" class="link">
-                    <img class="last_img" src="images/link_3.png" alt="">
                 </a>
             </div>
         </div>
