--- a/index-de.html
+++ b/index-de.html
@@ -71,6 +71,8 @@
                     <li><a href="https://pdfreactor.com">PDFreactor</a></li>
                     <li><a href="https://vivliostyle.com">Vivliostyle</a></li>
                     <li><a href="https://antennahouse.com">Antennahouse</a></li>
+                    <li><a href="https://www.speedata.de"/>Speedata Publisher</a></li>
+                    <li><a href="https://www.docraptor.com"/>Docraptor</a></li>
                 </ul>
                 <p class="bold">Freie Tools</p>
                 <ul>
@@ -157,7 +159,11 @@
                     gemeinsam mit ihnen Ihre Anforderungen
                     im Bereich Publishing. 
                     <br/><br/>
-                    Wir versuchen stets die für
+                    25 Jahre Expertise im Bereich Electronic Publish,
+                    <br/>
+                    12 Jahre Expertise im Bereich automatischer PDF Erzeugung.
+                    <br/><br/>
+                    Wir versuchen stets die für                                                   
                     Sie beste und kostengünstigste Lösung zu finden.
                 </p>
                 <p style="text-align: left; margin-top: 1em">
