--- a/index-de.html
+++ b/index-de.html
@@ -33,9 +33,9 @@
                     <img id="logo" src="images/logo_DE.png"/>
                 </div>
                 <div class="col-sm-6">
-                    <h1>Hochwertige PDF Layouts erzeugen aus</br>HTML/XML und CSS</h1>
+                    <h1>Komplexe PDF Layouts erzeugen aus</br>HTML/XML und CSS</h1>
                     <h3 style="max-width: 80%">PDF Dokumente
-                        aus strukturierten Inhalten mit Hilfe moderner Webtechnologien gestalten.
+                        aus strukturierten Inhalten erstellen, mit Hilfe moderner Webtechnologien gestalten.
                     </h3>
                 </div>
             </div>
@@ -159,9 +159,9 @@
                     gemeinsam mit ihnen Ihre Anforderungen
                     im Bereich Publishing. 
                     <br/><br/>
-                    25 Jahre Expertise im Bereich Electronic Publish,
+                    25 Jahre Expertise im Bereich Electronic Publishing,
                     <br/>
-                    12 Jahre Expertise im Bereich automatischer PDF Erzeugung.
+                    12 Jahre Expertise im Bereich automatisierter PDF Erzeugung.
                     <br/><br/>
                     Wir versuchen stets die für                                                   
                     Sie beste und kostengünstigste Lösung zu finden.
