--- a/index-de.html
+++ b/index-de.html
@@ -21,10 +21,10 @@
     <link rel="stylesheet" href="owl/owl.theme.css">
     <link rel="stylesheet" href="owl/owl.transitions.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="Gallery-2.27.1/css/blueimp-gallery.min.css">
 </head>
 
 <body lang="de">
-
         
     <div class="container-fluid">
         <div class="col-xs-12 top">
@@ -41,6 +41,8 @@
             </div>
         </div>
     </div>
+
+
     <div class="container" style="margin-top: 4em; margin-bottom: 4em">
         <div class="row">
             <div class="col-sm-8">
@@ -92,10 +94,61 @@
                 <iframe src="//www.slideshare.net/slideshow/embed_code/key/bmHH11fPovVhsa" width="400" height="300" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ajung/css-paged-media-a-review-of-tools-and-techniques" title="CSS Paged Media - A review of tools and techniques" target="_blank">CSS Paged Media - A review of tools and techniques</a> </strong> from <strong><a href="https://www.slideshare.net/ajung" target="_blank">Andreas Jung</a></strong> </div>
             </div>
             <div class="col-sm-4">
-
                 <iframe width="400" height="300" src="https://www.youtube.com/embed/gEUnTWW2Lnw" frameborder="0" allowfullscreen></iframe>
                 <strong><a href="https://www.youtube.com/watch?v=gEUnTWW2Lnw">High-quality generation PDF from XML/HTML with CSS Paged Media</a>
                     from Andreas Jung</strong>
+            </div>
+        </div>
+    </div>
+
+    <div class="container" style="margin-top: 4em; margin-bottom: 4em">
+        <div class="row">
+            <div class="col-sm-8">
+                <h2>Anwendungsfälle</h2>
+                <p class="bold">Kann ich CSS Paged Media in meinem Projekt verwenden?</p>
+                <p>Der CSS Paged Media Ansatz kann für verschiedene Arten von Publikationen
+                   verwendet werden - sowohl für traditionelle textlastige Dokument aber auch
+                   für layout-orientierte Dokumente mittlerer Komplexität.
+                </p>
+                <br/>
+                <ul> 
+                    <li>Technische Dokumentation</li> 
+                    <li>Journals und Papers</li> 
+                    <li>Standards, Normen</li> 
+                    <li>Flyer, Brochüren, Web-to-Print</li> 
+                    <li>u.v.w.m.</li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <h2>&nbsp;</h2>
+                <p class="bold">Beispiele</p>
+                <div id="blueimp-gallery" class="blueimp-gallery">
+                    <div class="slides"></div>
+                    <h3 class="title"></h3>
+                    <a class="prev">‹</a>
+                    <a class="next">›</a>
+                    <a class="close">×</a>
+                    <a class="play-pause"></a>
+                    <ol class="indicator"></ol>
+                </div>
+
+                <div id="links">
+                    <a href="images/slider1.png">
+                        <img src="images/slider1.png" style="width: 80px">
+                    </a>
+                    <a href="images/slider2.png">
+                        <img src="images/slider2.png" style="width: 80px">
+                    </a>
+                    <a href="images/slider3.png">
+                        <img src="images/slider3.png" style="width: 80px">
+                    </a>
+                    <a href="images/slider4.png">
+                        <img src="images/slider4.png" style="width: 80px">
+                    </a>
+                    <a href="images/slider5.png">
+                        <img src="images/slider5.png" style="width: 80px">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -252,6 +305,7 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="owl/owl.carousel.min.js"></script>
+    <script src="Gallery-2.27.1/js/blueimp-gallery.min.js"></script>
 </body>
 
 <script>
@@ -373,6 +427,19 @@ function stopVideo() {
 }
 
 </script>
+
+<script>
+document.getElementById('links').onclick = function (event) {
+    event = event || window.event;
+    var target = event.target || event.srcElement,
+        link = target.src ? target.parentNode : target,
+        options = {index: link, event: event},
+        links = this.getElementsByTagName('a');
+    blueimp.Gallery(links, options);
+};
+</script>
+
+
 
 </html>
 
