--- a/index-de.html
+++ b/index-de.html
@@ -134,19 +134,19 @@
 
                 <div id="links">
                     <a href="images/slider1.png">
-                        <img src="images/slider1.png" style="width: 80px">
+                        <img src="images/slider1_thumb.png" style="width: 80px">
                     </a>
                     <a href="images/slider2.png">
-                        <img src="images/slider2.png" style="width: 80px">
+                        <img src="images/slider2_thumb.png" style="width: 80px">
                     </a>
                     <a href="images/slider3.png">
-                        <img src="images/slider3.png" style="width: 80px">
+                        <img src="images/slider3_thumb.png" style="width: 80px">
                     </a>
                     <a href="images/slider4.png">
-                        <img src="images/slider4.png" style="width: 80px">
+                        <img src="images/slider4_thumb.png" style="width: 80px">
                     </a>
                     <a href="images/slider5.png">
-                        <img src="images/slider5.png" style="width: 80px">
+                        <img src="images/slider5_thumb.png" style="width: 80px">
                     </a>
                 </div>
             </div>
