--- a/index-de.html
+++ b/index-de.html
@@ -148,6 +148,9 @@
                     <a href="images/slider5.png">
                         <img src="images/slider5_thumb.png" style="width: 80px">
                     </a>
+                    <a href="images/slider6.png">
+                        <img src="images/slider6_thumb.png" style="width: 80px">
+                    </a>
                 </div>
             </div>
         </div>
