--- a/index-de.html
+++ b/index-de.html
@@ -10,10 +10,10 @@
     <meta name="copyright" content="Andreas Jung/ZOPYX">
 
     <meta property="og:url"          content="https://print-css.com"/>
-	<meta property="og:type"         content="website" />
+	  <meta property="og:type"         content="website" />
     <meta name="og:title" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und CSS"/>
     <meta name="og:description" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und CSS"/>
-	<meta property="og:image"        content="https://print-css.com/images/logo_DE.png" />
+	  <meta property="og:image"        content="https://print-css.com/images/logo_DE.png" />
     <link rel="image_src" href="https://print-css.com/images/logo_DE.png" />
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="bootstrap-theme.css">
@@ -25,14 +25,14 @@
 </head>
 
 <body lang="de">
-        
+
     <div class="container-fluid">
         <div class="col-xs-12 top">
             <div class="row">
-                <div class="col-sm-6">
-                    <img id="logo" src="images/logo_DE.png"/>
+                <div class="col-md-6">
+                    <img class="img-responsive" id="logo" src="images/logo_DE.png"/>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-md-6">
                     <h1>Komplexe PDF Layouts erzeugen aus</br>HTML/XML und CSS</h1>
                     <h3 style="max-width: 80%">PDF Dokumente
                         aus strukturierten Inhalten erstellen, mit Hilfe moderner Webtechnologien gestalten.
@@ -94,7 +94,7 @@
                 <iframe src="//www.slideshare.net/slideshow/embed_code/key/bmHH11fPovVhsa" width="400" height="300" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ajung/css-paged-media-a-review-of-tools-and-techniques" title="CSS Paged Media - A review of tools and techniques" target="_blank">CSS Paged Media - A review of tools and techniques</a> </strong> from <strong><a href="https://www.slideshare.net/ajung" target="_blank">Andreas Jung</a></strong> </div>
             </div>
             <div class="col-sm-4">
-                <iframe width="400" height="300" src="https://www.youtube.com/embed/gEUnTWW2Lnw" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/gEUnTWW2Lnw" frameborder="0" allowfullscreen style="margin-bottom:6px;"></iframe>
                 <strong><a href="https://www.youtube.com/watch?v=gEUnTWW2Lnw">High-quality generation PDF from XML/HTML with CSS Paged Media</a>
                     from Andreas Jung</strong>
             </div>
@@ -111,11 +111,11 @@
                    für layout-orientierte Dokumente mittlerer Komplexität.
                 </p>
                 <br/>
-                <ul> 
-                    <li>Technische Dokumentation</li> 
-                    <li>Journals und Papers</li> 
-                    <li>Standards, Normen</li> 
-                    <li>Flyer, Brochüren, Web-to-Print</li> 
+                <ul>
+                    <li>Technische Dokumentation</li>
+                    <li>Journals und Papers</li>
+                    <li>Standards, Normen</li>
+                    <li>Flyer, Brochüren, Web-to-Print</li>
                     <li>u.v.w.m.</li>
                 </ul>
             </div>
@@ -148,14 +148,11 @@
                     <a href="images/slider5.png">
                         <img src="images/slider5_thumb.png" style="width: 80px">
                     </a>
-                    <a href="images/slider6.png">
-                        <img src="images/slider6_thumb.png" style="width: 80px">
-                    </a>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <div class="container" style="margin-top: 2em; margin-bottom: 2em">
         <div class="row">
             <div class="col-sm-4">
@@ -193,10 +190,8 @@
     </div>
     <div class="container" style="margin-top: 2em">
         <div class="row links">
-            <div class="col-sm-2">
-            </div>
-            <div class="col-sm-2">
-                <h2>Kontakt</h2>
+            <div class="col-sm-4 col-sm-offset-2 text-center">
+                <h2 style="width: auto;">Kontakt</h2>
                 <p class="bold">&nbsp;</p>
                 <img src="images/andreasjung-rounded.png"/>
                 <br/>
@@ -205,21 +200,19 @@
                 Chef-Entwickler und Creative Guru
                 </p>
             </div>
-            <div class="col-sm-2">
-            </div>
             <div class="col-sm-6">
                 <h2>&nbsp;</h2>
                 <p class="bold">&nbsp;</p>
-                <p style="text-align: left"> 
+                <p style="text-align: left">
                     Wir beantworten gerne Ihren Fragen und analysieren
                     gemeinsam mit ihnen Ihre Anforderungen
-                    im Bereich Publishing. 
+                    im Bereich Publishing.
                     <br/><br/>
                     25 Jahre Expertise im Bereich Electronic Publishing,
                     <br/>
                     12 Jahre Expertise im Bereich automatisierter PDF Erzeugung.
                     <br/><br/>
-                    Wir versuchen stets die für                                                   
+                    Wir versuchen stets die für
                     Sie beste und kostengünstigste Lösung zu finden.
                 </p>
                 <p style="text-align: left; margin-top: 1em">
@@ -265,11 +258,11 @@
                     <br>
                     <p>
                         <a href="https://www.zopyx.de">ZOPYX</a>
-                    </p>                        
+                    </p>
                     <br>
                     <p>
                         <a href="https://www.produce-and-publish.de">Produce & Publish</a>
-                    </p>                        
+                    </p>
                     <br>
                     <p>
                         <a href="https://www.xml-director.info">XML-Director</a>
@@ -445,4 +438,3 @@ document.getElementById('links').onclick = function (event) {
 
 
 </html>
-
