--- a/index-de.html
+++ b/index-de.html
@@ -2,18 +2,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Druck-Layouts erstellen mit CSS Paged Media aus HTML/XML und CSS</title>
+    <title>Print-Layouts erstellen mit PrintCSS / CSS Paged Media aus HTML/XML und CSS</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="language" content="de">
-    <meta name="keywords" content="XML,HTML,CSS Paged Media, PDF">
-    <meta name="description" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und CSS"/>
+    <meta name="keywords" content="XML,HTML,CSS Paged Media, PDF, PrintCSS">
+    <meta name="description" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und CSS via PrintCSS"/>
     <meta name="author" content="Andreas Jung/ZOPYX">
     <meta name="copyright" content="Andreas Jung/ZOPYX">
 
     <meta property="og:url" content="https://print-css.com"/>
 	<meta property="og:type" content="website" />
-    <meta name="og:title" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und CSS"/>
-    <meta name="og:description" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und CSS"/>
+    <meta name="og:title" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und PrintCSS"/>
+    <meta name="og:description" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und PrintCSS"/>
 	<!-- <meta property="og:image" content="https://print-css.com/images/logo_DE.png" />
     <link rel="image_src" href="https://print-css.com/images/logo_DE.png" /> -->
     <link rel="stylesheet" href="bootstrap.css">
@@ -61,7 +61,7 @@
                    den Satzspiegel, Mehrspaltigkeit, linke/rechte Seiten, wiederkehrende
                    Texte im Kopf- oder Fußbereich etc. Der Vorteil unseres Ansatzes ist, daß
                    existierende Inhalte direkt wiederverwendet werden können. Das Erstellen von
-                   Druck-Layouts kann mit Grundkenntnissen in CSS leicht erlernt werden.
+                   Print-Layouts kann mit Grundkenntnissen in CSS leicht erlernt werden.
                    <br/>
                    <br/>
                    Auf unserem Portal
