--- a/index-de.html
+++ b/index-de.html
@@ -36,8 +36,8 @@
                     <img id="logo" src="images/logo_DE.png"/>
                 </div>
                 <div class="col-sm-6">
-                    <h1>Komplexe PDF Layouts erzeugen aus</br>HTML/XML und CSS</h1>
-                    <h3>PDF Dokumente aus strukturierten Inhalten erstellen, mit Hilfe moderner Webtechnologien gestalten.
+                    <h1>Automatisiert Print-Layouts erzeugen aus HTML/XML und CSS</h1>
+                    <h3>PDF Dokumente aus strukturierten Inhalten erstellen &mdash; mit Hilfe moderner Webtechnologien gestalten.
                     </h3>
                 </div>
             </div>
