--- a/index-de.html
+++ b/index-de.html
@@ -107,7 +107,7 @@
 
     <div class="container" style="margin-top: 4em; margin-bottom: 4em">
         <div class="row">
-            <div class="col-sm-8">
+            <div class="col-sm-4">
                 <h2>Anwendungsfälle</h2>
                 <p class="bold">Kann ich CSS Paged Media in meinem Projekt verwenden?</p>
                 <p>Der CSS Paged Media Ansatz kann für verschiedene Arten von Publikationen
@@ -156,6 +156,33 @@
                         <img src="images/slider6_thumb.png" style="width: 80px">
                     </a>
                 </div>
+            </div>
+            <div class="col-sm-4">
+                <h2>&nbsp;</h2>
+                <p class="bold">Referenzen (Auswahl)</p>
+                <ul> 
+                    <li>
+                        <a href="https://onkopedia.com">Onkopedia</a>
+                    </li>
+                    <li>
+                        <a href="https://www.produce-and-publish.com/showcase/references/locandy">Locandy</a>
+                    </li>
+                    <li>
+                        <a href="https://www.produce-and-publish.com/showcase/references/deisa-distributed-european-infrastructure-for-supercomputing-applications">DEISA</a>
+                    </li>
+                    <li>
+                        <a href="https://www.produce-and-publish.com/showcase/references/fallstudie-albrecht-ernst-gymnasium-oettingen-in-bayern">Albrecht-Ernst Gymnasium </a>
+                    </li>
+                    <li>
+                        <a href="https://www.produce-and-publish.com/showcase/references/european-agency-for-safety-and-health-at-work-osha">OSHA</a>
+                    </li>
+                    <li>
+                        <a href="https://www.produce-and-publish.com/showcase/references/tqm">TQM</a>
+                    </li>
+                    <li>
+                        <a href="https://www.produce-and-publish.com/showcase/references/veit-schiele-communications-gmbh">Veit Schiele Communications</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
