--- a/index-de.html
+++ b/index-de.html
@@ -65,7 +65,7 @@
                    <br/>
                    <br/>
                    Auf unserem Portal
-                   <a href="https://print-css.rocks">print-css.rocks</a>
+                   <a href="https://print-css.rocks">Print CSS Rocks</a>
                    finden Sie mehr zum CSS Paged Media Ansatz.
                 </ul>
             </div>
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <h2>Anwendungsfälle</h2>
-                <p class="bold">Kann ich CSS Paged Media in meinem Projekt verwenden?</p>
+                <p class="bold">Wann kann ich PrintCSS verwenden?</p>
                 <p>Der CSS Paged Media Ansatz kann für verschiedene Arten von Publikationen
                    verwendet werden - sowohl für traditionelle textlastige Dokument aber auch
                    für layout-orientierte Dokumente mittlerer Komplexität.
@@ -186,7 +186,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="container" style="margin-top: 2em; margin-bottom: 2em">
         <div class="row">
             <div class="col-sm-4">
@@ -217,6 +217,58 @@
                     </li>
                     <li>Die Übertragung der Daten zwischen Applikation und Konvertierungsserver
                          erfolgt immer verschlüsselt.
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    
+    <div class="container" style="margin-top: 2em; margin-bottom: 2em">
+        <div class="row">
+            <div class="col-sm-4">
+                <h2 style="width: 200%">Unsere Publishing Lösungen</h2>
+                <p class="bold">Publishing Lösungen</p>
+                <ul>
+                    <li>Wir realisieren maßgeschneiderte Publishing Lösungen, die
+                        exakt auf die Bedürfnisse unserer Kunden abgestimmt sind.</li>
+                    <li>Mit Hilfe unseres Baukastensystems <a
+                            href="https://www.produce-and-publish.com">Produce
+                            &amp; Publish</a> können wir jedes Problem die
+                        exakt passende Lösung realisieren. 
+                    </li>
+                    <li>
+                        Unsere Komponenten kommen sowohl aus dem Open-Source Bereich als auch aus
+                        dem Bereich der kommerziellen Komponenten. Wir haben für jedes Problem
+                        und jedes Budget die genau passende Lösung.
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <h2>&nbsp;</h2>
+                <p class="bold">Web/XML Content-Management</p>
+                <ul>
+                    <li>Wir realisieren seit 2002 Web-CMS Lösungen - meistens auf Basis des CMS <a href="https://plone.org">Plone</a>.
+                    </li>
+                    <li>Zur Realisierung professioneller Publishinglösungen stellen wir unser Tool <a href="https://xml-director.info">XML Director</a> als freie Software bereit. XML Director realisiert die Anbindung an beliebige XML Datenbank, Cloud Storage etc. und verfügt über Schnittstellen zu Konvertierungsdiensten wie <a href="https://c-rex.net">C-REX</a>.
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <h2>&nbsp;</h2>
+                <p class="bold">Kollaborative Content-Erstellung</p>
+                <ul>
+                    <li>Wir sind offizieller Partner von <a href="https://smashdocs.net">Smashdocs</a>.
+                        Smashdocs ist ein kollaborativer web-basierter Editor,
+                        der sich in beliebige web-basierte Systeme integrieren
+                        lässt. 
+                    </li>
+                    <li>
+                        Smashdocs kann auf Wunsch auch
+                        datenschutzkonform in ihrer eigenen Systemlandschaft
+                        betreiben lässt.
+                    </li>
+                    <li>Weitere Informationen zu unseren Lösungen rund um Smashdocs finden Sie auf unserem
+                        Portal <a href="https://content-gemeinsam-erstellen.de">Content Gemeinsam Erstellen</a>.
                     </li>
                 </ul>
             </div>
