--- a/index-de.html
+++ b/index-de.html
@@ -257,17 +257,17 @@
                 <h2>&nbsp;</h2>
                 <p class="bold">Kollaborative Content-Erstellung</p>
                 <ul>
-                    <li>Wir sind offizieller Partner von <a href="https://smashdocs.net">Smashdocs</a>.
-                        Smashdocs ist ein kollaborativer web-basierter Editor,
+                    <li>Wir sind offizieller Partner von <a href="https://smashdocs.net">SMASHDOCs</a>.
+                        SMASHDOCs ist ein kollaborativer web-basierter Editor,
                         der sich in beliebige web-basierte Systeme integrieren
                         lässt. 
                     </li>
                     <li>
-                        Smashdocs kann auf Wunsch auch
+                        SMASHDOCs kann auf Wunsch auch
                         datenschutzkonform in ihrer eigenen Systemlandschaft
                         betreiben lässt.
                     </li>
-                    <li>Weitere Informationen zu unseren Lösungen rund um Smashdocs finden Sie auf unserem
+                    <li>Weitere Informationen zu unseren Lösungen rund um SMASHDOCs finden Sie auf unserem
                         Portal <a href="https://content-gemeinsam-erstellen.de">Content Gemeinsam Erstellen</a>.
                     </li>
                 </ul>
