--- a/index-en.html
+++ b/index-en.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Print-Layouts erstellen mit PrintCSS / CSS Paged Media aus HTML/XML und CSS</title>
+    <title>Automatic generation of print layouts using PrintCSS / CSS Paged Media using HTML/XML and CSS</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="language" content="de">
     <meta name="keywords" content="XML,HTML,CSS Paged Media, PDF, PrintCSS">
@@ -36,8 +36,8 @@
                     <img id="logo" src="images/logo_DE.png"/>
                 </div>
                 <div class="col-sm-6">
-                    <h1>Automatisiert Print-Layouts erzeugen aus HTML/XML und CSS</h1>
-                    <h3>PDF Dokumente aus strukturierten Inhalten erstellen &mdash; mit Hilfe moderner Webtechnologien gestalten.
+                    <h1>Automatic generation of print layouts using HTML/XML and CSS</h1>
+                    <h3>Create PDF documents from structured content &mdash; using modern web technologies.
                     </h3>
                 </div>
             </div>
@@ -51,27 +51,26 @@
         <div class="row">
             <div class="col-sm-8">
                 <h2>XML/HTML + CSS = PDF</h2>
-                <p class="bold">Der CSS Paged Media Ansatz</p>
-                <p>Unsere PDF Lösungen basieren auf dem CSS Paged Media Ansatz.
-                   Dabei dienen struktruierte Inhalte wie XML oder semi-strukturierte
-                   Inhalte aus HTML als Grundlage für die Konvertierung. Zur Festlegung
-                   von Design und Layout verwenden wir CSS (Cascading Stylesheets) wie man
-                   diese von der Website-Programmierung her kennt. Der CSS Paged Media Standard
-                   erweitert CSS um Anweisungen, die spezifisch sind für Print-Layouts wie z.B.
-                   den Satzspiegel, Mehrspaltigkeit, linke/rechte Seiten, wiederkehrende
-                   Texte im Kopf- oder Fußbereich etc. Der Vorteil unseres Ansatzes ist, daß
-                   existierende Inhalte direkt wiederverwendet werden können. Das Erstellen von
-                   Print-Layouts kann mit Grundkenntnissen in CSS leicht erlernt werden.
+                <p class="bold">The CSS Paged Media approach</p>
+                <p>Our PDF solutions are based on the CSS Paged Media approach.
+                   Within this approach, structured content such as XML or semi-structured
+                   HTML-based serve as the basis for the conversion. The fixing of design
+                   and layout is carried out using CSS (Cascading Stylesheets), which are
+                   also used during website programming. The CSS Paged Media standard
+                   extends CSS with print layout-specific instructions, such as the type
+                   area, the number of columns, left/right alignment, repeated text in the
+                   text in the header or footer area, etc. The advantage of our approach
+                   is that existing content can be directly reused. The print layout 
+                   creation process can be mastered easily with basic knowledge in CSS.
                    <br/>
                    <br/>
-                   Auf unserem Portal
-                   <a href="https://print-css.rocks">print-css.rocks</a>
-                   finden Sie mehr zum CSS Paged Media Ansatz.
+                   More on the CSS Paged Media approach can be found on our portal,
+                   <a href="https://print-css.rocks">Print CSS Rocks</a>.
                 </ul>
             </div>
             <div class="col-sm-4">
-                <h2>Die Tools</h2>
-                <p class="bold">Kommerzielle Tools</p>
+                <h2>The Tools</h2>
+                <p class="bold">Commercial Tools</p>
                 <ul>
                     <li><a href="https://princexml.com">PrinceXML</a></li>
                     <li><a href="https://pdfreactor.com">PDFreactor</a></li>
@@ -80,7 +79,7 @@
                     <li><a href="https://www.speedata.de"/>Speedata Publisher</a></li>
                     <li><a href="https://www.docraptor.com"/>Docraptor</a></li>
                 </ul>
-                <p class="bold">Freie Tools</p>
+                <p class="bold">Free Tools</p>
                 <ul>
                     <li><a href="https://weasyprint.com">WeasyPrint</a></li>
                 </ul>
@@ -91,7 +90,7 @@
     <div class="container ifrm-wrap" style="margin-top: 2em; margin-bottom: 2em">
         <div class="row">
             <div class="col-sm-4">
-                <iframe src="//www.slideshare.net/slideshow/embed_code/key/gkL1cqytPE6CGV" width="400" height="300" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ajung/pdf-generierung-mit-xmlhtml-und-css-was-die-tools-knnen-und-was-nicht" title="PDF Generierung mit XML/HTML und CSS - was die Tools können und was nicht." target="_blank">PDF Generierung mit XML/HTML und CSS - was die Tools können und was nicht.</a> </strong> from <strong><a href="https://www.slideshare.net/ajung" target="_blank">Andreas Jung</a></strong> </div>
+                <iframe src="//www.slideshare.net/slideshow/embed_code/key/gkL1cqytPE6CGV" width="400" height="300" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ajung/pdf-generierung-mit-xmlhtml-und-css-was-die-tools-knnen-und-was-nicht" title="PDF Generierung mit XML/HTML und CSS - was die Tools können und was nicht." target="_blank">PDF Generierung mit XML/HTML und CSS - was die Tools können und was nicht (PDF generation with XML/HTML and CSS - What the tools can and can't do)</a> </strong> from <strong><a href="https://www.slideshare.net/ajung" target="_blank">Andreas Jung</a></strong> </div>
 
             </div>
             <div class="col-sm-4">
@@ -108,24 +107,24 @@
     <div class="container" style="margin-top: 4em; margin-bottom: 4em">
         <div class="row">
             <div class="col-sm-8">
-                <h2>Anwendungsfälle</h2>
-                <p class="bold">Kann ich CSS Paged Media in meinem Projekt verwenden?</p>
-                <p>Der CSS Paged Media Ansatz kann für verschiedene Arten von Publikationen
-                   verwendet werden - sowohl für traditionelle textlastige Dokument aber auch
-                   für layout-orientierte Dokumente mittlerer Komplexität.
+                <h2>Use Cases</h2>
+                <p class="bold">Can I use CSS Paged Media in my project?</p>
+                <p>The CSS Paged Media approach can be used for varying publication types - 
+                   from traditional text-heavy documents to layout-oriented documents of
+                   medium complexity.
                 </p>
                 <br/>
                 <ul> 
-                    <li>Technische Dokumentation</li> 
-                    <li>Journals und Papers</li> 
-                    <li>Standards, Normen</li> 
-                    <li>Flyer, Brochüren, Web-to-Print</li> 
-                    <li>u.v.w.m.</li>
+                    <li>Technical documentation</li> 
+                    <li>Journals and papers</li> 
+                    <li>Standards, norms</li> 
+                    <li>Flyers, brochures, web-to-print</li> 
+                    <li>And many more</li>
                 </ul>
             </div>
             <div class="col-sm-4">
                 <h2>&nbsp;</h2>
-                <p class="bold">Beispiele</p>
+                <p class="bold">Examples</p>
                 <div id="blueimp-gallery" class="blueimp-gallery">
                     <div class="slides"></div>
                     <h3 class="title"></h3>
@@ -163,33 +162,33 @@
     <div class="container" style="margin-top: 2em; margin-bottom: 2em">
         <div class="row">
             <div class="col-sm-4">
-                <h2>Unsere Leistungen</h2>
-                <p class="bold">Beratung</p>
+                <h2>Our Services</h2>
+                <p class="bold">Consulting</p>
                 <ul>
-                    <li>Wir beraten Sie bei Ihrem PDF Projekt von Anfang bis Ende</li>
-                    <li>Unsere Beratung ist herstellerneutral</li>
-                    <li>Analyse der Layoutanforderungen und Auswahl des geeigneten Tools</li>
-                    <li>Individuelle Schulungen und Hands-on-Training</li>
+                    <li>We can advise your PDF project from start to finish</li>
+                    <li>Our consulting is provider-neutral</li>
+                    <li>Analysis of layout requirements and selection of suitable tools</li>
+                    <li>Individual and hands-on training sessions</li>
                 </ul>
             </div>
             <div class="col-sm-4">
                 <h2>&nbsp;</h2>
-                <p class="bold">Implementierung</p>
+                <p class="bold">Implementation</p>
                 <ul>
-                    <li>Erstellung von Templates und Layoutvorlagen gemäß ihrer Projektvorgaben</li>
-                    <li>Integration des PDF Workflows in ihre IT und Systemlandschaft</li>
+                    <li>Creation of layout templates according to your project specifications</li>
+                    <li>Integration of the PDF workflow in your IT and system landscape</li>
                 </ul>
             </div>
             <div class="col-sm-4">
                 <h2>&nbsp;</h2>
-                <p class="bold">Betrieb</p>
+                <p class="bold">Operation</p>
                 <ul>
-                    <li>Unsere PDF Lösungen können als Web-Service betrieben werden.
-                        Auf Wunsch übernehmen wir für Sie das Hosting und den Betrieb
-                        des Konvertierungsservers.
+                    <li>Our PDF solutions can be operated as a web service.
+                        If so required, we can also manage the hosting and operation of the
+                        conversion servers.
                     </li>
-                    <li>Die Übertragung der Daten zwischen Applikation und Konvertierungsserver
-                         erfolgt immer verschlüsselt.
+                    <li>The transfer of data between the application and the conversion
+                         server is always encrypted.
                     </li>
                 </ul>
             </div>
@@ -198,7 +197,7 @@
     <div class="container" style="margin-top: 2em">
         <div class="row links">
 		<div class="col-xs-12 text-center">
-                <h2>Kontakt</h2>
+                <h2>Contact</h2>
             </div>
             
             <div class="col-sm-3 col-sm-offset-1 text-center">
@@ -207,7 +206,7 @@
                 <br/><br/>
                 <b>Andreas Jung</b>
                 <br/>
-                Chef-Entwickler und Creative Guru
+                Chef Developer and Creative Guru
                 </p>
             </div>
             
@@ -215,16 +214,15 @@
                 <h2>&nbsp;</h2>
                 <p class="bold">&nbsp;</p>
                 <p style="text-align: left"> 
-                    Wir beantworten gerne Ihren Fragen und analysieren
-                    gemeinsam mit ihnen Ihre Anforderungen
-                    im Bereich Publishing. 
+                    We are pleased to answer your questions and work alongside you 
+                    to analyse you publishing requirements.
                     <br/><br/>
-                    25 Jahre Expertise im Bereich Electronic Publishing,
+                    25 years of expertise in electronic publishing,
                     <br/>
-                    12 Jahre Expertise im Bereich automatisierter PDF Erzeugung.
+                    12 years of expertise in automated PDF creation.
                     <br/><br/>
-                    Wir versuchen stets die für                                                   
-                    Sie beste und kostengünstigste Lösung zu finden.
+                    We strive constantly to find the best                                                   
+                    and most affordable solution for you.
                 </p>
                 <p style="text-align: left; margin-top: 1em">
                     <img src="images/img_2.png" alt="" class="inverted" style="margin-right: 1em">
@@ -265,7 +263,7 @@
                     <p><a class="mailto" href="mailto:info@zopyx.com">info@zopyx.com</a></p>
                 </div>
                 <div class="col-sm-4 websites">
-                    <h3>Unsere Websites und Projekte</h4>
+                    <h3>Our Websites and Projects</h4>
                     <br>
                     <p>
                         <a href="https://www.zopyx.de">ZOPYX</a>
@@ -276,7 +274,7 @@
                     </p>                        
                     <br>
                     <p>
-                        <a href="https://www.xml-director.info">XML-Director</a>
+                        <a href="https://www.xml-director.info">XML Director</a>
                     </p>
                     <br>
                     <p>
@@ -305,7 +303,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-12" id="copyright">
-                    &copy; 2017, ZOPYX, <a href="https://zopyx.de">www.zopyx.de</a> &bullet; <a href="https://zopyx.de/impressum">Impressum</a>
+                    &copy; 2017, ZOPYX, <a href="https://zopyx.de">www.zopyx.de</a> &bullet; <a href="https://zopyx.de/impressum">Legal</a>
                 </div>
             </div>
         </div>
