--- a/index-en.html
+++ b/index-en.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <title>Automatic generation of print layouts using PrintCSS / CSS Paged Media using HTML/XML and CSS</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="language" content="de">
+    <meta http-equiv="language" content="en">
     <meta name="keywords" content="XML,HTML,CSS Paged Media, PDF, PrintCSS">
-    <meta name="description" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und CSS via PrintCSS"/>
+    <meta name="description" content="Generation of high-quality PDF documents from HTML/XML with PrintCSS"/>
     <meta name="author" content="Andreas Jung/ZOPYX">
     <meta name="copyright" content="Andreas Jung/ZOPYX">
 
     <meta property="og:url" content="https://print-css.com"/>
 	<meta property="og:type" content="website" />
-    <meta name="og:title" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und PrintCSS"/>
-    <meta name="og:description" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und PrintCSS"/>
+    <meta name="og:title" content="Generation of high-quality PDF documents from HTML/XML with PrintCSS"/>
+    <meta name="og:description" content="Generation of high-quality PDF documents from HTML/XML with PrintCSS"/>
 	<!-- <meta property="og:image" content="https://print-css.com/images/logo_DE.png" />
     <link rel="image_src" href="https://print-css.com/images/logo_DE.png" /> -->
     <link rel="stylesheet" href="bootstrap.css">
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="Gallery-2.27.1/css/blueimp-gallery.min.css">
 </head>
 
-<body lang="de">
+<body lang="en">
         
     <div class="slider-sec">
     <div class="container">
