--- a/index-en.html
+++ b/index-en.html
@@ -266,11 +266,11 @@
                     <h3>Our Websites and Projects</h4>
                     <br>
                     <p>
-                        <a href="https://www.zopyx.de">ZOPYX</a>
+                        <a href="https://www.zopyx.com">ZOPYX</a>
                     </p>                        
                     <br>
                     <p>
-                        <a href="https://www.produce-and-publish.de">Produce & Publish</a>
+                        <a href="https://www.produce-and-publish.com">Produce & Publish</a>
                     </p>                        
                     <br>
                     <p>
@@ -303,7 +303,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-12" id="copyright">
-                    &copy; 2017, ZOPYX, <a href="https://zopyx.de">www.zopyx.de</a> &bullet; <a href="https://zopyx.de/impressum">Legal</a>
+                    &copy; 2017, ZOPYX, <a href="https://zopyx.com">www.zopyx.com</a> &bullet; <a href="https://zopyx.com/imprint">Legal</a>
                 </div>
             </div>
         </div>
