--- a/index-en.html
+++ b/index-en.html
@@ -286,7 +286,7 @@
                     </p>
                     <br>
                     <p>
-                        <a href="https://creating-content-together.com">Creating Content Together</a>
+                        <a href="https://creating-content-together.info">Creating Content Together</a>
                     </p>
                 </div>
                 <div class="col-sm-4 text-center socials">
