--- a/index-en.html
+++ b/index-en.html
@@ -99,7 +99,7 @@
             <div class="col-sm-4">
                 <iframe width="400" height="300" src="https://www.youtube.com/embed/gEUnTWW2Lnw" frameborder="0" allowfullscreen></iframe>
                 <strong><a href="https://www.youtube.com/watch?v=gEUnTWW2Lnw">High-quality generation PDF from XML/HTML with CSS Paged Media</a>
-                    from Andreas Jung</strong>
+                </strong>from <strong>Andreas Jung</strong>
             </div>
         </div>
     </div>
