--- a/index-de.html
+++ b/index-de.html
@@ -82,7 +82,7 @@
                 </ul>
                 <p class="bold">Freie Tools</p>
                 <ul>
-                    <li><a href="https://weasyprint.com">WeasyPrint</a></li>
+                    <li><a href="https://weasyprint.org">WeasyPrint</a></li>
                 </ul>
             </div>
         </div>
