--- a/index-en.html
+++ b/index-en.html
@@ -81,7 +81,7 @@
                 </ul>
                 <p class="bold">Free Tools</p>
                 <ul>
-                    <li><a href="https://weasyprint.com">WeasyPrint</a></li>
+                    <li><a href="https://weasyprint.org">WeasyPrint</a></li>
                 </ul>
             </div>
         </div>
