--- a/index-de.html
+++ b/index-de.html
@@ -389,7 +389,7 @@
             </div>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="jquery-3.1.1.min.js"></script>
     <script src="owl/owl.carousel.min.js"></script>
     <script src="Gallery-2.27.1/js/blueimp-gallery.min.js"></script>
 </body>
