--- a/index-de.html
+++ b/index-de.html
@@ -5,15 +5,15 @@
     <title>Print-Layouts erstellen mit PrintCSS / CSS Paged Media aus HTML/XML und CSS</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="language" content="de">
-    <meta name="keywords" content="XML,HTML,CSS Paged Media, PDF, PrintCSS">
+    <meta name="keywords" content="XML,HTML,CSS Paged Media, PDF, PrintCSS, Satz-Automation">
     <meta name="description" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und CSS via PrintCSS"/>
     <meta name="author" content="Andreas Jung/ZOPYX">
     <meta name="copyright" content="Andreas Jung/ZOPYX">
 
     <meta property="og:url" content="https://print-css.com"/>
 	<meta property="og:type" content="website" />
-    <meta name="og:title" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und PrintCSS"/>
-    <meta name="og:description" content="Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und PrintCSS"/>
+    <meta name="og:title" content="Satz-Automation, Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und PrintCSS"/>
+    <meta name="og:description" content="Satz-Automation, Erstellung von hochqualitativen PDF Dokumenten auf HTML/XML und PrintCSS"/>
 	<!-- <meta property="og:image" content="https://print-css.com/images/logo_DE.png" />
     <link rel="image_src" href="https://print-css.com/images/logo_DE.png" /> -->
     <link rel="stylesheet" href="bootstrap.css">
@@ -36,7 +36,7 @@
                     <img id="logo" src="images/logo_DE.png"/>
                 </div>
                 <div class="col-sm-6">
-                    <h1>Automatisiert Print-Layouts erzeugen aus HTML/XML und CSS</h1>
+                    <h1>Satz-Automation: HTML/XML + CSS = PDF</h1>
                     <h3>PDF Dokumente aus strukturierten Inhalten erstellen &mdash; mit Hilfe moderner Webtechnologien gestalten.
                     </h3>
                 </div>
