--- a/index-de.html
+++ b/index-de.html
@@ -36,8 +36,9 @@
                     <img id="logo" src="images/logo_DE.png"/>
                 </div>
                 <div class="col-sm-6">
-                    <h1>Satz-Automation: HTML/XML + CSS = PDF</h1>
-                    <h3>PDF Dokumente aus strukturierten Inhalten erstellen &mdash; mit Hilfe moderner Webtechnologien gestalten.
+                    <h1>Satz-Automation mit PrintCSS</h1>
+                    <h3>PDF Dokumente aus strukturierten Inhalten erstellen &mdash; mit Hilfe von PrintCSS gestalten.
+                    
                     </h3>
                 </div>
             </div>
@@ -50,9 +51,9 @@
     <div class="container" style="margin-top: 4em; margin-bottom: 4em">
         <div class="row">
             <div class="col-sm-8">
-                <h2>XML/HTML + CSS = PDF</h2>
-                <p class="bold">Der CSS Paged Media Ansatz</p>
-                <p>Unsere PDF Lösungen basieren auf dem CSS Paged Media Ansatz.
+                <h2>Der PrintCSS Ansatz</h2>
+                <p class="bold">XML/HTML + CSS = PDF</p>
+                <p>Unsere PDF Lösungen basieren auf dem CSS Paged Media Ansatz (populär "PrintCSS" genannt).
                    Dabei dienen struktruierte Inhalte wie XML oder semi-strukturierte
                    Inhalte aus HTML als Grundlage für die Konvertierung. Zur Festlegung
                    von Design und Layout verwenden wir CSS (Cascading Stylesheets) wie man
