--- a/index-en.html
+++ b/index-en.html
@@ -303,7 +303,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-12" id="copyright">
-                    &copy; 2020, ZOPYX, <a href="https://zopyx.com">www.zopyx.com</a> &bullet; <a href="https://zopyx.com/imprint">Legal</a>
+                    &copy; 2020, ZOPYX, <a href="https://zopyx.com">www.zopyx.com</a> &bullet; <a href="https://zopyx.com/imprint.html">Legal</a>
                 </div>
             </div>
         </div>
