--- a/index-en.html
+++ b/index-en.html
@@ -74,7 +74,9 @@
                 <ul>
                     <li><a href="https://princexml.com">PrinceXML</a></li>
                     <li><a href="https://pdfreactor.com">PDFreactor</a></li>
+                    <!--
                     <li><a href="https://vivliostyle.com">Vivliostyle</a></li>
+                    -->
                     <li><a href="https://antennahouse.com">Antennahouse</a></li>
                     <li><a href="https://www.speedata.de"/>Speedata Publisher</a></li>
                     <li><a href="https://www.docraptor.com"/>Docraptor</a></li>
@@ -82,6 +84,8 @@
                 <p class="bold">Free Tools</p>
                 <ul>
                     <li><a href="https://weasyprint.org">WeasyPrint</a></li>
+                    <li><a href="https://typeset.sh">Typeset.sh</a></li>
+                    <li><a href="https://pagedjs.org">paged.js</a></li>
                 </ul>
             </div>
         </div>
