--- a/index-de.html
+++ b/index-de.html
@@ -95,15 +95,22 @@
 
     <div class="container ifrm-wrap" style="margin-top: 2em; margin-bottom: 2em">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <iframe src="//www.slideshare.net/slideshow/embed_code/key/gkL1cqytPE6CGV" width="400" height="300" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ajung/pdf-generierung-mit-xmlhtml-und-css-was-die-tools-knnen-und-was-nicht" title="PDF Generierung mit XML/HTML und CSS - was die Tools können und was nicht." target="_blank">PDF Generierung mit XML/HTML und CSS - was die Tools können und was nicht.</a> </strong> from <strong><a href="https://www.slideshare.net/ajung" target="_blank">Andreas Jung</a></strong> </div>
 
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <iframe src="//www.slideshare.net/slideshow/embed_code/key/bmHH11fPovVhsa" width="400" height="300" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ajung/css-paged-media-a-review-of-tools-and-techniques" title="CSS Paged Media - A review of tools and techniques" target="_blank">CSS Paged Media - A review of tools and techniques</a> </strong> from <strong><a href="https://www.slideshare.net/ajung" target="_blank">Andreas Jung</a></strong> </div>
             </div>
-            <div class="col-sm-4">
-                <iframe width="400" height="300" src="https://www.youtube.com/embed/gEUnTWW2Lnw" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <iframe width="516" height="400" src="https://www.youtube.com/embed/pltX0yDsSU4" frameborder="0" allowfullscreen></iframe>
+                <strong><a href="https://www.youtube.com/watch?v=gEUnTWW2Lnw">High-quality generation PDF from XML/HTML with CSS Paged Media</a></strong>
+                from <strong>Andreas Jung</strong>
+            </div>
+            <div class="col-sm-6">
+                <iframe width="516" height="400" src="https://www.youtube.com/embed/gEUnTWW2Lnw" frameborder="0" allowfullscreen></iframe>
                 <strong><a href="https://www.youtube.com/watch?v=gEUnTWW2Lnw">High-quality generation PDF from XML/HTML with CSS Paged Media</a></strong>
                 from <strong>Andreas Jung</strong>
             </div>
