--- a/index-de.html
+++ b/index-de.html
@@ -379,7 +379,7 @@
                     </p>
                     <br>
                     <p>
-                        <a href="https://content-gemeinsam-erstellen.de">Content Gemeinsam Erstellen</a>
+                        <a href="https://medical-publishing.solutions">Medical Publishing Solutions</a>
                     </p>
                 </div>
                 <div class="col-sm-4 text-center socials">
