--- a/index-en.html
+++ b/index-en.html
@@ -297,7 +297,7 @@
                     </p>
                     <br>
                     <p>
-                        <a href="https://creating-content-together.info">Creating Content Together</a>
+                        <a href="https://medical-publishing.solutions">Medical Publishing Solutions</a>
                     </p>
                 </div>
                 <div class="col-sm-4 text-center socials">
